--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
@@ -21,7 +21,7 @@
   {# TODO: payments total #}
 {% endblock %}
 
-{% block header_sidebar_modifier %}{% endblock %}
+{% block header_sidebar_modifier %}--pharma{% endblock %}
 
 {% block header_sidebar_about %}
   <p>{% blocktrans with name=object.name %}Gesamtsumme, die die {{ name }} im vergangenen Jahr an Ärzte und Einrichtungen gezahlt hat.{% endblocktrans %}</p>
