--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_company_payment_label.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_company_payment_label.html
@@ -11,11 +11,11 @@
     </h2>
   </header>
 
-  <h3 class="efa__detail-vis__sum">{{ label.total|intcomma }}&nbsp;€</h3>
+  <h3 class="efa__detail-vis__sum">{{ label.total|intcomma_floatformat:0 }}&nbsp;€</h3>
 
   <div class="efa__detail-vis__bar-chart">
-    <span class="efa__detail-vis__bar--individual" style="width: {{ label.individual_percent|unlocalize }}%"></span>
-    <span class="efa__detail-vis__bar--aggregated" style="width: {{ label.aggregated_percent|unlocalize }}%"></span>
+    <span class="efa__detail-vis__bar--individual" style="width: {{ label.vis_individual_percent|unlocalize }}%"></span>
+    <span class="efa__detail-vis__bar--aggregated" style="width: {{ label.vis_aggregated_percent|unlocalize }}%"></span>
   </div>
 
   <ul class="efa__detail-vis__labels">
