Pharma company: Remove non-functional back link.

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
@@ -12,9 +12,7 @@
 
 {% block header_title %}{{ object.name }}{% endblock %}
 
-{% block header_content %}
-  <a class="efa__header__back-link" href="#">{% trans "Show all pharma companies" %}</a>
-{% endblock %}
+{% block header_content %}{% endblock %}
 
 {% block header_sidebar_title %}
   {{ payments.total|intword }}&nbsp;€
