Drug search: Update markup to be consistent with recipient search.

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
@@ -32,13 +32,9 @@
   </div>
 </div>
 
-<header class="page__section-header ">
-  <h2 class="page__section-headline">
-    {% trans "Was your medicine pushed by pharma companies?" %}
-  </h2>
-</header>
-
+</div>
 {% include "correctiv_eurosfueraerzte/_drug_search.html" %}
+<div class="page__container">
 
 <div class="row">
   <div class="col-md-6">
