Recipient detail: Add content and markup.

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_detail.html
@@ -43,6 +43,8 @@
   </header>
 {% endblock %}
 
-{% block content %}
+{% block content %}{% endblock %}
 
+{% block after_content %}
+  {% include "correctiv_eurosfueraerzte/_recipient_search.html" %}
 {% endblock %}
