--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
@@ -20,6 +20,8 @@
   {% endblock %}
   </div>
 
+  {% block after_content %}{% endblock %}
+
   {% addtoblock "css" %}
     <link rel="stylesheet" href="{% static "css/themes/eurosfueraerzte.css" %}" media="screen" charset="utf-8">
     <link rel="stylesheet" href="{% static "eurosfueraerzte/jquery.auto-complete/jquery.auto-complete.css" %}" media="screen" charset="utf-8">
