--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_recipient_search.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_recipient_search.html
@@ -39,7 +39,14 @@
           {% if recipient_form.company_obj %}
             <small>
               {% blocktrans with name=recipient_form.company_obj %}
-                Currently showing only showing recipients of {{ name }}.
+                Currently only showing recipients of {{ name }}.
+              {% endblocktrans %}
+            </small>
+          {% endif %}
+          {% if recipient_form.label.value %}
+            <small>
+              {% blocktrans with label=recipient_form.label.value %}
+                Currently only showing recipients getting {{ label }}.
               {% endblocktrans %}
             </small>
           {% endif %}
