--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_list.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_list.html
@@ -16,7 +16,7 @@
     <table class="table">
       <thead>
         <tr>
-          <th>{% trans "Doctor Name" %}</th>
+          <th>{% trans "Name" %}</th>
           <th>{% trans "Address" %}</th>
           <th class="text-right">{% trans "Total amount" %}</th>
         </tr>
@@ -33,7 +33,11 @@
           {{ object.postcode }} {{ object.location }}
         </td>
         <td class="text-right">
-          {{ object.total|intcomma_floatformat:2 }}&nbsp;€
+          {% if object.computed_total %}
+            {{ object.computed_total|intcomma_floatformat:2 }}&nbsp;€
+          {% else %}
+            {{ object.total|intcomma_floatformat:2 }}&nbsp;€
+          {% endif %}
         </td>
       </tr>
     {% endfor %}
