--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
@@ -32,8 +32,14 @@
   <div class="col-md-6">
     <h3>{% trans "Known top money-receiving doctors" %}</h3>
     <ol>
-      <li>Lorem Müller</li>
-      <li>Peter Ipsum</li>
+      {% for doctor in top_doctors %}
+        <li>
+          <a href="{{ doctor.get_absolute_url }}">
+            {{ doctor.get_full_name }}
+          </a>
+          – {{ doctor.total|intcomma_floatformat:0 }}&nbsp;€
+        </li>
+      {% endfor %}
     </ol>
   </div>
 </div>
