Recipient detail: Update table layout.

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_recipient_nearby.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_recipient_nearby.html
@@ -3,7 +3,7 @@
 {% load humanize %}
 
 <div class="table-responsive">
-  <table class="table table-striped">
+  <table class="efa__table table table-striped">
     {% for object in nearby_objects %}
     <tr>
       <td>
