--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_list.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_list.html
@@ -13,7 +13,7 @@
 {% block content %}
 {% if object_list %}
   <div class="table-responsive">
-    <table class="table">
+    <table class="efa__table table table-striped">
       <thead>
         <tr>
           <th>{% trans "Name" %}</th>
