Change wording, update translation files

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
@@ -45,7 +45,10 @@
   <div class="page__row">
     <div class="page__section -narrow">
       <p>
-        {% trans "Nur knapp 30 Prozent der Ärzte haben ihr Einverständnis gegeben, dass die Reise- und Hotelkosten, die Tagungsgebühren und Beratungshonorare, die sie von Pharmafirmen erhalten haben, veröffentlicht werden dürfen. Die Zahlungen an Ärzte für Studien und Anwendungsbeobachtungen wollen die Pharmafirmen grundsätzlich nicht personenbezogen veröffentlichen." %}
+        {% trans "Nur knapp 30 Prozent der Ärzte haben den Firmen ihr Einverständnis gegeben, dass ihre Vortrags- und Beratungshonorare, Tagungsgebühren und Reisespesen veröffentlicht werden dürfen." %}
+      </p>
+      <p>
+        {% trans "Die Zahlungen an Ärzte für Studien und Anwendungsbeobachtungen wollen die Pharmafirmen grundsätzlich nicht personenbezogen veröffentlichen." %}
       </p>
       <p>
         {% blocktrans with name=object.get_full_name %}
